--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
     <title>To-Do List</title>
 </head>
 <body>
-    <header>To-Do List</header>
 
-    <form>
-        <input type="text" class="text-input">
-        <button class="Submit-button">Submit</button>
-        <button class="clear-list-button">Clear List</button>
-    </form>
+    
+    <div class="to-do-list">
+        <header>To-do list</header>
+        <form>
+        <input type="text" id="idea">
+        <button value="add to list" id="submit-button">add</button>
+        <button class="clear-button" id="clear-button">clear list</button>
+      </form>
+    </div>
+
+
+
+    <div class="to-do-things">
+        <h2>list</h2>
+        <ul id="list"></ul>
+        <li></li>
+    </div>
 </body>
 <script src="script/script.js"></script>
 </html>
