Working on a followalong tutorial on Youtube to make to-do list functional.

--- a/index.html
+++ b/index.html
@@ -7,24 +7,13 @@
     <title>To-Do List</title>
 </head>
 <body>
-
-    
-    <div class="to-do-list">
-        <header>To-do list</header>
-        <form>
-        <input type="text" id="idea">
-        <button value="add to list" id="submit-button">add</button>
-        <button class="clear-button" id="clear-button">clear list</button>
-      </form>
+    <h1>To-Do list</h1>
+    <div class="container">
+        <input id="input-field" type="text"><button id="add-to-do">+</button>
+        <div class="to-dos" id="to-do-container">
+        </div>
     </div>
+    <script src="script/script.js"></script>
 
-
-
-    <div class="to-do-things">
-        <h2>list</h2>
-        <ul id="list"></ul>
-        <li></li>
-    </div>
 </body>
-<script src="script/script.js"></script>
 </html>
