--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
     <title>To-Do List</title>
 </head>
 <body>
@@ -14,6 +14,5 @@
         </div>
     </div>
     <script src="script/script.js"></script>
-
 </body>
 </html>
